cmake_minimum_required(VERSION 3.4.1)
project("SDL2")

include_directories("include/")

set(HEADERS src/events/scancodes_linux.h
            src/events/SDL_sysevents.h
            src/events/SDL_clipboardevents_c.h
            src/events/SDL_touch_c.h
            src/events/SDL_events_c.h
            src/events/blank_cursor.h
            src/events/SDL_dropevents_c.h
            src/events/SDL_gesture_c.h
            src/events/SDL_windowevents_c.h
            src/events/default_cursor.h
            src/events/SDL_keyboard_c.h
            src/events/SDL_mouse_c.h
            src/SDL_assert_c.h
            src/thread/SDL_thread_c.h
            src/thread/pthread/SDL_sysmutex_c.h
            src/thread/pthread/SDL_systhread_c.h
            src/thread/SDL_systhread.h
            src/dynapi/SDL_dynapi_procs.h
            src/dynapi/SDL_dynapi.h
            src/dynapi/SDL_dynapi_overrides.h
            src/SDL_internal.h
            src/video/SDL_sysvideo.h
            src/video/SDL_rect_c.h
            src/video/SDL_RLEaccel_c.h
            src/video/SDL_pixels_c.h
            src/video/SDL_shape_internals.h
            src/video/SDL_blit.h
            src/video/SDL_blit_slow.h
            src/video/SDL_blit_auto.h
            src/video/android/SDL_androidmessagebox.h
            src/video/android/SDL_androidwindow.h
            src/video/android/SDL_androidclipboard.h
            src/video/android/SDL_androidtouch.h
            src/video/android/SDL_androidevents.h
            src/video/android/SDL_androidvideo.h
            src/video/android/SDL_androidmouse.h
            src/video/android/SDL_androidkeyboard.h
            src/video/SDL_egl_c.h
            src/video/SDL_blit_copy.h
            src/libm/math_private.h
            src/libm/math_libm.h
            src/audio/SDL_wave.h
            src/audio/SDL_audio_c.h
            src/audio/SDL_audiodev_c.h
            src/audio/SDL_audiomem.h
            src/audio/android/SDL_androidaudio.h
            src/audio/SDL_sysaudio.h
            src/core/android/SDL_android.h
            src/timer/SDL_timer_c.h
            src/joystick/SDL_joystick_c.h
            src/joystick/SDL_sysjoystick.h
            src/joystick/SDL_gamecontrollerdb.h
            src/joystick/android/SDL_sysjoystick_c.h
            src/SDL_error_c.h
            src/render/SDL_sysrender.h
            src/render/SDL_yuv_sw_c.h
            src/render/software/SDL_blendpoint.h
            src/render/software/SDL_drawline.h
            src/render/software/SDL_blendfillrect.h
            src/render/software/SDL_render_sw_c.h
            src/render/software/SDL_rotate.h
            src/render/software/SDL_draw.h
            src/render/software/SDL_drawpoint.h
            src/render/software/SDL_blendline.h
            src/render/opengles/SDL_glesfuncs.h
            include/SDL_platform.h
            include/SDL_gesture.h
            include/close_code.h
            include/SDL_keycode.h
            include/SDL.h
            include/SDL_error.h
            include/SDL_revision.h
            include/SDL_filesystem.h
            include/SDL_surface.h
            include/SDL_audio.h
            include/SDL_types.h
            include/SDL_assert.h
            include/SDL_events.h
            include/SDL_stdinc.h
            include/SDL_messagebox.h
            include/SDL_loadso.h
            include/SDL_blendmode.h
            include/SDL_atomic.h
            include/SDL_opengles.h
            include/SDL_copying.h
            include/SDL_name.h
            include/SDL_rect.h
            include/begin_code.h
            include/SDL_cpuinfo.h
            include/SDL_touch.h
            include/SDL_mutex.h
            include/SDL_power.h
            include/SDL_pixels.h
            include/SDL_config.h
            include/SDL_scancode.h
            include/SDL_egl.h
            include/SDL_version.h
            include/SDL_config_android.h
            include/SDL_bits.h
            include/SDL_endian.h
            include/SDL_quit.h
            include/SDL_mouse.h
            include/SDL_hints.h
            include/SDL_log.h
            include/SDL_haptic.h
            include/SDL_main.h
            include/SDL_system.h
            include/SDL_syswm.h
            include/SDL_opengl_glext.h
            include/SDL_joystick.h
            include/SDL_render.h
            include/SDL_clipboard.h
            include/SDL_keyboard.h
            include/SDL_thread.h
            include/SDL_video.h
            include/SDL_gamecontroller.h
            include/SDL_opengl.h
            include/SDL_timer.h
            include/SDL_shape.h
            include/SDL_rwops.h)

set(SOURCES src/SDL_assert.c
            src/events/SDL_gesture.c
            src/events/SDL_keyboard.c
            src/events/SDL_mouse.c
            src/events/SDL_events.c
            src/events/SDL_touch.c
            src/events/SDL_quit.c
            src/events/SDL_clipboardevents.c
            src/events/SDL_windowevents.c
            src/events/SDL_dropevents.c
            src/loadso/dlopen/SDL_sysloadso.c
            src/atomic/SDL_atomic.c
            src/atomic/SDL_spinlock.c
            src/filesystem/android/SDL_sysfilesystem.c
            src/thread/pthread/SDL_syscond.c
            src/thread/pthread/SDL_systhread.c
            src/thread/pthread/SDL_syssem.c
            src/thread/pthread/SDL_sysmutex.c
            src/thread/pthread/SDL_systls.c
            src/thread/SDL_thread.c
            src/SDL_log.c
            src/dynapi/SDL_dynapi.c
            src/SDL_hints.c
            src/video/SDL_blit.c
            src/video/SDL_clipboard.c
            src/video/SDL_egl.c
            src/video/SDL_blit_auto.c
            src/video/SDL_blit_N.c
            src/video/SDL_blit_1.c
            src/video/SDL_pixels.c
            src/video/SDL_bmp.c
            src/video/SDL_blit_copy.c
            src/video/SDL_RLEaccel.c
            src/video/SDL_blit_slow.c
            src/video/SDL_shape.c
            src/video/SDL_blit_0.c
            src/video/SDL_surface.c
            src/video/SDL_stretch.c
            src/video/SDL_video.c
            src/video/SDL_fillrect.c
            src/video/SDL_blit_A.c
            src/video/android/SDL_androidkeyboard.c
            src/video/android/SDL_androidvideo.c
            src/video/android/SDL_androidevents.c
            src/video/android/SDL_androidmouse.c
            src/video/android/SDL_androidgl.c
            src/video/android/SDL_androidmessagebox.c
            src/video/android/SDL_androidwindow.c
            src/video/android/SDL_androidtouch.c
            src/video/android/SDL_androidclipboard.c
            src/video/SDL_rect.c
            src/SDL_error.c
            src/audio/SDL_mixer.c
            src/audio/SDL_audio.c
            src/audio/SDL_audiotypecvt.c
            src/audio/SDL_audiodev.c
            src/audio/SDL_wave.c
            src/audio/SDL_audiocvt.c
            src/audio/android/SDL_androidaudio.c
            src/core/android/SDL_android.c
            src/timer/unix/SDL_systimer.c
            src/timer/SDL_timer.c
            src/SDL.c
            src/stdlib/SDL_iconv.c
            src/stdlib/SDL_malloc.c
            src/stdlib/SDL_string.c
            src/stdlib/SDL_stdlib.c
            src/stdlib/SDL_getenv.c
            src/stdlib/SDL_qsort.c
            src/joystick/SDL_gamecontroller.c
            src/joystick/SDL_joystick.c
            src/joystick/android/SDL_sysjoystick.c
            src/cpuinfo/SDL_cpuinfo.c
            src/render/SDL_render.c
            src/render/software/SDL_blendpoint.c
            src/render/software/SDL_drawpoint.c
            src/render/software/SDL_blendfillrect.c
            src/render/software/SDL_drawline.c
            src/render/software/SDL_render_sw.c
            src/render/software/SDL_blendline.c
            src/render/software/SDL_rotate.c
            src/render/opengles/SDL_render_gles.c
            src/render/SDL_yuv_sw.c
            src/file/SDL_rwops.c)

add_definitions(-DANDROID_NDK -DGL_GLEXT_PROTOTYPES)
add_library(${PROJECT_NAME} SHARED ${SOURCES} ${HEADERS})
target_link_libraries(${PROJECT_NAME} dl GLESv1_CM GLESv2 log android)
